| Summary: | ASTERISK-25085: [patch]Potential crash after unload of func_periodic_hook or test_message | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2015-05-14 00:07:17 | Date Closed: | 2015-05-20 15:24:21 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Functions/func_periodic_hook |
| Versions: | SVN 13.3.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | This crash can be very easily reproduced. Install the latest 13 or master with samples configs. Replace modules.conf:
{noformat} [modules] autoload=no load=func_periodic_hook.so load=pbx_config.so {noformat} Run {{asterisk -c}}, from CLI run: {noformat} module unload func_periodic_hook.so dialplan show {noformat} The key to this bug is that func_periodic_hook is loaded first. Then the context is rebuilt during the load of pbx_config. At the unload of func_periodic_hook the original context pointer is no longer valid, so it fails to destroy the context. Any access to the priorities registered by func_periodic_hook like with {{dialplan show}} will cause a segmentation fault. The problem with test_message.so is identical. | ||
| Comments: | |||